# tree-sitter-mutt-compose

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  extension.toml  grammar.js  highlights.scm  package-lock.json  tree-sitter.json
backlog/: config.yml
backlog/tasks/: task-1 - grammar-improvements.md
bindings/rust/: build.rs  lib.rs
examples/: body_only.mutt  headers_only.mutt  headers_with_body.mutt
languages/mutt-compose/: config.toml  highlights.scm
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: advanced_features.txt  complete.txt  custom_headers.txt  empty_headers.txt  folded_headers.txt  invalid_headers.txt  known_headers.txt  markdown_bodies.txt  pseudo_headers.txt  reply_quotes.txt  rfc5322_compliance.txt  task_examples.txt
test/highlight/: basic.eml
