[package]
name = "tree-sitter-mutt-compose"
description = "A grammar for (neo)mutt compose buffers"
version = "0.1.0"
authors = ["Ben Swift <ben@benswift.me>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "mutt-compose"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/benswift/tree-sitter-mutt-compose"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
